--- a/CSS/product.css
+++ b/CSS/product.css
@@ -23,7 +23,6 @@ main {
     margin-right: 100px;
 }
 
-
 .Book {
     width: 200px;
     background-color: #fff;
@@ -47,10 +46,8 @@ main {
     margin-bottom: 10px;
 }
 
-
-
 .background-img {
-    background-color: #E7EFF2;
+    background-color: #e7eff2;
     display: flex;
     width: 100%;
     height: 200px;
@@ -92,7 +89,6 @@ main {
     background-color: hsl(202, 96%, 47%);
 }
 
-
 .search-container input[type="text"] {
     margin-right: 10px;
     margin-left: 60px;
@@ -111,7 +107,6 @@ main {
     font-size: 16px;
     margin-right: 10px;
 }
-
 
 .search-container {
     display: flex;
